--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@ main {
 main .gameboards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: var(--x-big);
+    gap: var(--big);
 }
 
 .gameboards>div {
@@ -96,6 +96,33 @@ main .gameboards {
     border-radius: var(--x-small);
 }
 
+.computer {
+    position: relative;
+}
+
+.computer .gameboard {
+    filter: blur(var(--x-small));
+    pointer-events: none;
+}
+
+.start-button {
+    position: absolute;
+    padding: var(--small) var(--normal);
+    cursor: pointer;
+    border: 2px solid var(--neutral-3);
+    background-color: var(--neutral-1);
+    will-change: contents;
+    transition: transform 0.3s;
+}
+
+.start-button:hover {
+    transform: scale(1.05);
+}
+
+.start-button:active {
+    transform: scale(0.95);
+}
+
 .gameboard .cell {
     display: flex;
     justify-content: center;
@@ -111,11 +138,6 @@ main .gameboards {
 
 .cell.player-ship {
     background-color: var(--neutral-3);
-    border: none;
-}
-
-.cell.computer-ship {
-    background-color: var(--neutral-2);
     border: none;
 }
 
