Implement functionality to unblur computer's board when start button is clicked

--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,7 @@ main .gameboards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: var(--big);
+    user-select: none;
 }
 
 .gameboards>div {
@@ -128,6 +129,10 @@ main .gameboards {
     justify-content: center;
     align-items: center;
     border: 1px solid var(--neutral-2);
+}
+
+.cell:hover {
+    border: 2px solid var(--neutral-3);
 }
 
 .cell.label {
